# Prismind

./: .coderabbit.yml  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  build.ps1  build.sh  patterns.csv  pyproject.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: arm64-bench.yml  arm64-performance.yml  ci.yml  dependabot-prs.yml  perf-profile.yml  security-audit.yml
.kiro/settings/rules/: design-principles.md  ears-format.md
.kiro/settings/templates/specs/: design.md
.kiro/settings/templates/steering/: structure.md
.kiro/specs/phase1-foundation/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/phase2-search/: PHASE3_HANDOFF.md  design.md  requirements.md  research.md  spec.json  task_10_2_summary.md  task_11_completion_summary.md  tasks.md
.kiro/specs/phase3-learning/: design.md  requirements.md  spec.json  tasks.md
.kiro/specs/phase4-integration/: design.md  requirements.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
benches/: evaluate_bench.rs  extract_patterns_bench.rs  legal_moves_bench.rs  make_move_bench.rs  rotation_bench.rs  score_conversion_bench.rs  search_bench.rs
deploy/: install-service.sh  prismind-training.service
docs/: 01_design_overview.md  02_technical_specs.md  03_parameters.md  04_quick_reference.md  05_arm64_performance.md  README.md  arm64-benchmarks.md  bypass-policy.md  deployment-oci-ampere-a1.md  pattern.csv  pattern.md  perf_profiling.md  perf_report_template.md  performance-report.md  phase2-handoff.md
examples/: display_demo.rs
python/: analyze_checkpoints.py  evaluate.py  monitor.py  train.py
python/prismind/: __init__.py
python/tests/: __init__.py  test_scripts.py
scripts/: README.md  perf_profile.sh
src/: arm64.rs  board.rs  evaluator.rs  lib.rs  pattern.rs  search.rs  x86_64.rs
src/learning/: adam.rs  benchmark.rs  checkpoint.rs  convergence.rs  eligibility_trace.rs  error_handler.rs  game_history.rs  logger.rs  memory.rs  mod.rs  score.rs  self_play.rs  shared_evaluator.rs  td_learner.rs  training_engine.rs
src/python/: checkpoint_manager.rs  debug_module.rs  evaluator.rs  mod.rs  statistics_manager.rs  training_manager.rs
tests/: checkpoint_enhanced_test.rs  learning_algorithm_test.rs  learning_deps_test.rs  learning_integration_test.rs  learning_module_test.rs  pattern_integration.rs  perf_profiling_test.rs  perf_script_validation_test.rs  phase4_integration_test.rs  public_api_integration.rs  pyo3_build_test.rs  pyo3_evaluator_test.rs  stage_management.rs
