[package]
name = "prismind"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "target-cpu=neoverse-n1", "-C", "target-feature=+neon,+crc,+crypto"]

[lib]
name = "prismind"
path = "src/lib.rs"

[[bin]]
name = "prismind"
path = "src/main.rs"

[[bench]]
name = "rotation_bench"
harness = false

[[bench]]
name = "legal_moves_bench"
harness = false

[[bench]]
name = "make_move_bench"
harness = false

[[bench]]
name = "extract_patterns_bench"
harness = false

[[bench]]
name = "score_conversion_bench"
harness = false

[[bench]]
name = "evaluate_bench"
harness = false

[[bench]]
name = "search_bench"
harness = false
